--- a/plugin.xml
+++ b/plugin.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
-           id="com.tsukurusha.phonegap.plugins.ScreenOrientation"
+           id="com.contrib.phonegap.plugin.screenOrientation"
       version="0.1.0">
 
     <name>ScreenOrientation</name>
     
-    <keywords>phonegap,Screen Orientation,android</keywords>
+    <keywords>phonegap, screen orientation, android</keywords>
     
     <description>
-      Phonegap plugin which adds support for Screen Orientation under Android. 
+      Phonegap plugin which adds support for screen orientation under Android. 
     </description>
     
     <license>MIT</license>
@@ -21,17 +21,17 @@
 
     <!-- android -->
     <platform name="android">
-       <js-module src="www/pg-plugin-screen-orientation.js" name="screenOrientation">
-          <clobbers target="ScreenOrientation" />
+       <js-module src="www/screenOrientation.js" name="screenOrientation">
+          <clobbers target="screenOrientation" />
        </js-module>
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="ScreenOrientation">
-                <param name="android-package" value="com.tsukurusha.phonegap.plugins.ScreenOrientation" />
+                <param name="android-package" value="com.contrib.phonegap.plugin.ScreenOrientation" />
             </feature>
         </config-file>
 
-        <source-file src="src/android/ScreenOrientation.java" target-dir="src/com/tsukurusha/phonegap/plugins/ScreenOrientation" />
+        <source-file src="src/android/ScreenOrientation.java" target-dir="src/com/phonegap/plugin/screenOrientation" />
 
     </platform>
 </plugin>
